metadata/force-app/main/default/objects/Subsidiaries__c/Subsidiaries__c.object-meta.xml
<CustomObject>
    <label>Subsidiary</label>
    <nameField>
        <label>Subsidiary</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subsidiaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>