metadata/force-app/main/default/objects/Subsidiaries__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Address of the subsidiary</description>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>