metadata/force-app/main/default/objects/Subsidiaries__c/fields/Current_Avg_Indexation_Rate__c.field-meta.xml
<CustomField>
    <fullName>Current_Avg_Indexation_Rate__c</fullName>
    <description>Used to store the average indexation rate to be used as current rate for applying indexation on orders.</description>
    <label>Current Avg Indexation Rate</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>