metadata/force-app/main/default/objects/Subsidiaries__c/fields/Subsidiary_Netsuite_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_Netsuite_Internal_ID__c</fullName>
    <description>The Netsuite internal ID of the subsidiary.</description>
    <externalId>true</externalId>
    <inlineHelpText>The Netsuite internal ID of the subsidiary.</inlineHelpText>
    <label>Subsidiary Netsuite Internal ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>